fixed text centering issue on safari browser not displaying correctly

--- a/style.css
+++ b/style.css
@@ -280,7 +280,7 @@ form {
 }
 
 .popup-content > p {
-  justify-self: center;
+  text-align: center;
   margin-bottom: 1rem;
 }
 
